--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header class="container">
       <nav class="nav">
-        <div class="logo">Your Name</div>
+        <div class="logo">Radha Nagzirkar
+        </div>
         <div class="links">
           <a href="#projects">Projects</a>
           <a href="#about">About</a>
@@ -22,7 +23,7 @@
 
     <main class="container">
       <section class="hero">
-        <h1>Hi, I’m Your Name</h1>
+        <h1>Hi, I’m Radha Nagzirkar</h1>
         <p>
           I build modern software and clean user experiences. This is my GitHub
           Pages site.
@@ -76,18 +77,18 @@
 
       <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: <a class="link" href="mailto:you@example.com">you@example.com</a></p>
+        <p>Email: <a class="link" href="mailto:radha.nagzirkar@gmail.com">radha.nagzirkar@gmail.com</a></p>
         <p>
           LinkedIn:
-          <a class="link" href="https://linkedin.com/in/yourusername" target="_blank" rel="noreferrer">
-            linkedin.com/in/yourusername
+          <a class="link" href="https://linkedin.com/in/radha-nagzirkar" target="_blank" rel="noreferrer">
+            linkedin.com/in/radha-nagzirkar
           </a>
         </p>
       </section>
     </main>
 
     <footer class="footer container">
-      <p>© <span id="year"></span> Your Name</p>
+      <p>© <span id="year"></span> Radha Nagzirkar</p>
     </footer>
 
     <script src="script.js"></script>
