--- a/index.html
+++ b/index.html
@@ -3,94 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Portfolio</title>
-    <meta name="description" content="My portfolio website" />
-    <link rel="stylesheet" href="style.css" />
+    <title>Radha Nagzirkar | Product Engineer</title>
+    <meta
+      name="description"
+      content="Portfolio and work samples for Radha Nagzirkar — product-focused software engineer."
+    />
   </head>
-
   <body>
-    <header class="container">
-      <nav class="nav">
-        <div class="logo">Radha Nagzirkar
-        </div>
-        <div class="links">
-          <a href="#projects">Projects</a>
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
-        </div>
-      </nav>
-    </header>
-
-    <main class="container">
-      <section class="hero">
-        <h1>Hi, I’m Radha Nagzirkar</h1>
-        <p>
-          I build modern software and clean user experiences. This is my GitHub
-          Pages site.
-        </p>
-        <div class="buttons">
-          <a class="btn" href="#projects">View Projects</a>
-          <a class="btn secondary" href="#contact">Contact</a>
-        </div>
-      </section>
-
-      <section id="projects" class="section">
-        <h2>Projects</h2>
-
-        <div class="grid">
-          <article class="card">
-            <h3>Project One</h3>
-            <p>One line description of what you built and why it matters.</p>
-            <p class="meta">Tech: HTML, CSS, JS</p>
-            <a class="link" href="https://github.com/yourusername" target="_blank" rel="noreferrer">
-              GitHub
-            </a>
-          </article>
-
-          <article class="card">
-            <h3>Project Two</h3>
-            <p>One line description of what you built and why it matters.</p>
-            <p class="meta">Tech: React, Node</p>
-            <a class="link" href="https://github.com/yourusername" target="_blank" rel="noreferrer">
-              GitHub
-            </a>
-          </article>
-
-          <article class="card">
-            <h3>Project Three</h3>
-            <p>One line description of what you built and why it matters.</p>
-            <p class="meta">Tech: Python, ML</p>
-            <a class="link" href="https://github.com/yourusername" target="_blank" rel="noreferrer">
-              GitHub
-            </a>
-          </article>
-        </div>
-      </section>
-
-      <section id="about" class="section">
-        <h2>About</h2>
-        <p>
-          Write 3 to 5 lines about you. Mention your focus areas, what you’re
-          learning, and what kinds of roles you want.
-        </p>
-      </section>
-
-      <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Email: <a class="link" href="mailto:radha.nagzirkar@gmail.com">radha.nagzirkar@gmail.com</a></p>
-        <p>
-          LinkedIn:
-          <a class="link" href="https://linkedin.com/in/radha-nagzirkar" target="_blank" rel="noreferrer">
-            linkedin.com/in/radha-nagzirkar
-          </a>
-        </p>
-      </section>
-    </main>
-
-    <footer class="footer container">
-      <p>© <span id="year"></span> Radha Nagzirkar</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
