--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Radha Nagzirkar | Product Engineer</title>
+    <title>Radha Nagzirkar | Software Engineer</title>
     <meta
       name="description"
-      content="Portfolio and work samples for Radha Nagzirkar — product-focused software engineer."
+      content="Portfolio and work samples for Radha Nagzirkar — software engineer."
     />
   </head>
   <body>
